--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ a {
   content: '';
   position: absolute;
   width: 100%;
-  height: 100%;
+
   background-color: #000000a6;
   border-radius: 5px;
 
@@ -110,6 +110,13 @@ a {
 .carouser-sticker p {
   width: 100%;
   height: 100px;
+
+}
+
+.inner-wrapper {
+  display: flex;
+  margin: auto;
+  height: 20px;
 
 }
 
